--- a/todo.org
+++ b/todo.org
@@ -96,17 +96,22 @@ CLOSED: [2022-04-06 Wed 17:13]
   :LOGBOOK:
   CLOCK: [2022-04-05 Tue 20:47]--[2022-04-05 Tue 21:00] =>  0:13
   :END:
-* TODO 1.2 操作系统上的程序(什么是程序和编译器)
+* DONE 1.2 操作系统上的程序(什么是程序和编译器)
+  CLOSED: [2022-05-21 Sat 05:41]
 :PROPERTIES:
 :PARENT_ID: NJU-2022-OS
 :ID:       46389b2f-d306-4832-acb9-651749daa22d
 :ORDER:    1
 :END:
-* TODO 1.3 多处理器编程(线程库、现代处理器和宽松内存模型)
+* NEXT 1.3 多处理器编程(线程库、现代处理器和宽松内存模型)
 :PROPERTIES:
 :PARENT_ID: NJU-2022-OS
 :ID:       b639a91e-1a04-4ece-b03a-1e5c854903df
 :ORDER:    2
+:END:
+:LOGBOOK:
+CLOCK: [2022-05-21 Sat 11:55]--[2022-05-21 Sun 12:04] =>  0:09
+CLOCK: [2022-05-21 Sat 05:41]--[2022-05-21 Sat 06:32] =>  0:51
 :END:
 
 * DONE 没有ID属性的entry设置child时，自动添加ID属性
