--- a/todo.org
+++ b/todo.org
@@ -336,7 +336,8 @@ CLOCK: [2022-05-07 Sat 16:59]--[2022-05-07 Sat 17:12] =>  0:13
 :PARENT_ID: 5103290c-1e80-4095-97d6-da034ec032ef
 :ORDER:    20
 :END:
-* NEXT 分析错误编码'200039'
+* DONE 分析错误编码'200039'
+  CLOSED: [2022-05-24 Tue 16:32]
   :PROPERTIES:
   :ID:       5553840b-c766-48b3-b02a-98c7db9ea362
   :PARENT_ID: 2595c172-46a7-43ea-aaa4-dca146571f57
