--- a/todo.org
+++ b/todo.org
@@ -385,3 +385,4 @@ CLOCK: [2022-05-07 Sat 16:59]--[2022-05-07 Sat 17:12] =>  0:13
 :PARENT_ID: 5103290c-1e80-4095-97d6-da034ec032ef
 :ORDER:    33
 :END:
+* NEXT 使用 emacsql 存储
